<resources>
    <string name="app_name">PharaSnap</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="accessibility_service_description">PharaSnap need access to android accessibility framework to read text on your screen as well as to identify where the text and image elements are placed on the screen when you tap on them. No personal data is collected and shared to third parties</string>
    <string name="text_hint_default">Text mode. Tap on the text element to capture</string>
    <string name="text_hint_close_overlay">swipe anywhere on screen or tap collapse button to collapse the overlay</string>
    <string name="app_shortcut_short_label">Launch widget</string>
    <string name="app_shortcut_long_label">Launch widget to copy text on screen</string>
    <string name="text_selection_modal_title">Change text selection</string>
    <string name="quick_settings_modal_title">Quick Settings</string>
    <string name="entry_list_modal_title">Recent items</string>
    <string name="change_text_modal_title">Edit text</string>
    <string name="accessibility_enable_alert_description">You must provide PharaSnap access to use Accessibility service to read text and image content on the screen. Go setting and select PharaSnap to enable accessibility service</string>
    <string name="text_detection_failed">Could not detect any text</string>
    <string name="list_empty_text">No entries yet! This your last 20 recent item list. When a text is identified it will be shown here</string>
    <string name="accessibility_requirement_description">
        Please enable accessibility service to read and identify the positions of text elements and image elements on the screen to extract their text content. On the settings page, select this app and enable accessibility permission.
        \nOn accessibility settings go to installed / Downloaded Apps > Select PharaSnap and switch the toggle button to \'on\' state to grant accessibility service.
    </string>
    <string name="accessibility_requirement_description_first_time">
        For PharaSnap to capture and copy text on the screen. It need access to Accessibility service to read text block on screen and as well identify images block are placed on the screen for image-to-text recognition. No personal data is collected and shared to third parties
        \nOn accessibility settings go to installed / Downloaded Apps > Select PharaSnap and switch the toggle button to \'on\' state to grant accessibility service.
    </string>
    <string name="troubleshoot_button_label">Not detecting text? try troubleshoot</string>
    <string name="introduction">PharaSnap can help you copy text on the screen even on places where you don\'t have the facility directly copy text to clipboard. PharaSnap can even capture text on images without ever leaving the app</string>
    <string name="add_tile_description">To make this tool easily accessible to use it is recommended to add the quick settings shortcut in your notification panel. Open your notification panel, in the top section (quick settings panel) then tap to customize the panel and add the shortcut tile provided by this app to the active area. Drag and place it on a convenient place
        \n\nAnother way to open the widget is by hold pressing the app launch icon which prompt you open the widget.
    </string>
    <string name="add_tile_requirement">Quick launching from quick settings in notification tiles is the most recommended way to launch/open this tool because it is very quicker and you don\'t switch between apps, simply slide down the notification tile panel and tap the shortcut button</string>
    <string name="media_projection_request_explanation">Whenever PharaSnap wants to read visual content of the screen (using picture mode or text recognition on pictures on the screen) you will be prompt for requesting screen capturing session to capture visual content on the screen (this is an system requirement for your Android Version).
    When the widget is collapsed or when switching away from picture mode which starts an idle cooldown to end screen capturing if not used. Then you will be prompted again to grant screen capturing if it is required again</string>
    <string name="capturing_modes_tutorial">PharaSnap has two modes text and picture mode. Text mode capture text on the screen upon tapping including text placed on images and added to your clipboard. You can capture text on any language on text elements on the screen but however when capturing text placed inside pictures PharaSnap will use text recognition which for now only support latin characters (including English).
On Picture Mode, you can capture screenshot of only the relevant picture from screen by tapping on it picture by automatically cropping out highlighted image - technically you can use this mode on other UI elements like text blocks, button .etc, not only pictures.
You can switch between the two modes with left-most button on the widget</string>
    <string name="text_copy_tutorial">Once you tap on the text on screen (not drag and select) it would get highlighted and you can select multiple selections at once.
        By default all text from all selected text blocks will be automatically copied to clipboard once you exit or collapse the floating widget. Also you can use text selection editor to only select the required text from the text blocks when you tap on the yellow bar.</string>
    <string name="recent_items_tutorial">You can also view your last copied items in the recent list from the floating widget itself. On hold pressing a single english word which prompts you the definition on Google web browser Give it a try!.</string>
    <string name="developer_note">This is an app developed by single person. If love this app useful I would like to hear your feedback and thoughts.</string>
    <string name="main_menu_list">main menu list</string>
    <string name="tile_label">Capture text</string>
    <string name="walkthrough_page_content">walkthrough_page_content</string>
    <string name="second_troubleshooting_description">During development phase I have experienced text content some apps will not be available to extract like comment text on YouTube app. However after updating that app to latest version might resolve this issue. So if encountered a similar situation please make sure the host app in in latest version.\nIf none works restart the accessibility service by toggling on and off in accessibility settings</string>
    <string name="first_troubleshooting_description">Some app can request some confidential/private pages on the app like igcognito tabs on chrome to be secured and blocks capturing visual contents on the screen which prevents image to text recognition to work. Please make sure content is not placed on secured screen for example like in chrome open the link from igconito tab to normal tab</string>
    <string name="second_troubleshooting_heading">Not detecting text on Normal mode ?</string>
    <string name="first_troubleshooting_heading">Not detecting text on image mode ?</string>
    <string name="troubleshooting_page_header">Troubleshooting</string>
    <string name="long_press_button_changer_default_label">Assign button</string>
    <string-array name="text_mode_descriptions">
        <item>Auto Switch</item>
        <item>(Default) Smartly detects type of the tapped element and use text image recognition if required or capture the text provided by accessibility.</item>
        <item>Text Label</item>
        <item>Capture text provided only by accessibility on non-image text elements without using OCR</item>
        <item>Image text recognition</item>
        <item>Recognize and capture text on images only. Only supports recognition of latin characters (including English)</item>
    </string-array>
</resources>