<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingTop="45dp"
    android:paddingHorizontal="25dp"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">
        <ImageButton
            android:id="@+id/troubleshoot_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:background="@drawable/primary_color_round_rect"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troubleshooting_page_header"
            android:layout_marginStart="12dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_troubleshooting_heading"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_troubleshooting_description"
                android:layout_marginVertical="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_troubleshooting_heading"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_troubleshooting_description"
                android:layout_marginTop="12dp"
                />
            <Button
                android:id="@+id/open_accessibility"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:text="Open Accessibility Settings"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <com.alchemedy.pharasnap.widgets.VersionLabel
                android:id="@+id/version_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="Version x.x\nDeveloped by Alchemedy"
                android:layout_margin="12dp" />
        </LinearLayout>
</LinearLayout>